# robot_traj_generator

./: CMakeLists.txt  package.xml
config/: mpc_traj_params.yaml  robot_traj_params.yaml
launch/: mpc_traj_pub.launch  robot_traj_planner.launch
script/: recorder_srv.py  sin_traj_pub.py  test_mpc_traj_pub.py
src/: mpc_cart_traj_pub.cpp  robot_traj_generator.cpp
